--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,19 @@ button:hover {
   cursor: pointer;
   background-color: transparent;
 }
-p {
+#output {
   font-size: 20px;
+  margin-bottom: 60px;
+}
+.footer {
+  position: relative;
+  bottom: 0;
+  margin: auto;
+  text-align: center;
+  width: 100%;
+}
+.icon {
+  width: 50px;
+  padding: 0.5rem;
+  margin: 0;
 }
